@@ -1,16 +1,21 @@
 package dev.joopie.jambot.music.command;
 
 import dev.joopie.jambot.api.youtube.JambotYouTubeException;
+import dev.joopie.jambot.command.CommandAutocomplete;
 import dev.joopie.jambot.command.CommandHandler;
 import dev.joopie.jambot.music.GuildMusicService;
 import dev.joopie.jambot.music.JambotMusicPlayerException;
 import dev.joopie.jambot.music.JambotMusicServiceException;
+import dev.joopie.jambot.repository.artist.ArtistRepository;
+import dev.joopie.jambot.repository.track.TrackRepository;
 import dev.joopie.jambot.service.SearchService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import net.dv8tion.jda.api.entities.emoji.Emoji;
+import net.dv8tion.jda.api.events.interaction.command.CommandAutoCompleteInteractionEvent;
 import net.dv8tion.jda.api.hooks.ListenerAdapter;
 import net.dv8tion.jda.api.interactions.commands.Command;
+import net.dv8tion.jda.api.interactions.commands.CommandAutoCompleteInteraction;
 import net.dv8tion.jda.api.interactions.commands.CommandInteraction;
 import net.dv8tion.jda.api.interactions.commands.CommandInteractionPayload;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
@@ -20,13 +25,15 @@ import net.dv8tion.jda.api.interactions.commands.build.Commands;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import net.dv8tion.jda.api.requests.RestAction;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.List;
 import java.util.Objects;
 
 @Component
 @Slf4j
 @RequiredArgsConstructor
-public class SearchCommandHandler extends ListenerAdapter implements CommandHandler {
+public class SearchCommandHandler extends ListenerAdapter implements CommandHandler, CommandAutocomplete {
     private static final String COMMAND_NAME = "search";
     private static final String COMMAND_OPTION_INPUT_ARTIST = "artist";
     private static final String COMMAND_OPTION_INPUT_SONGNAME = "songname";
@@ -35,6 +42,9 @@ public class SearchCommandHandler extends ListenerAdapter implements CommandHand
     private final SearchService searchService;
 
     private final GuildMusicService musicService;
+
+    private final ArtistRepository artistRepository;
+    private final TrackRepository trackRepository;
 
     @Override
     public Command.Type type() {
@@ -87,7 +97,7 @@ public class SearchCommandHandler extends ListenerAdapter implements CommandHand
             final var videoId = searchService.performSpotifyAndYoutubeSearch(artistName, trackName);
 
             if (videoId.isEmpty()) {
-                return event.reply(String.format("We could not find any results with your search **%s - %s**", artistName, trackName)).setEphemeral(true);
+                return event.reply("We could not find any results with your search **%s - %s**".formatted(artistName, trackName)).setEphemeral(true);
             } else {
                 musicService.play(event.getMember(), videoId);
                 final var parsedVideoId = YOUTUBE_URL + videoId;
@@ -105,5 +115,32 @@ public class SearchCommandHandler extends ListenerAdapter implements CommandHand
             return event.getHook().sendMessage(exception.getMessage())
                     .setEphemeral(true);
         }
+    }
+
+    @Transactional
+    @Override
+    public void onCommandAutoCompleteInteraction(CommandAutoCompleteInteractionEvent event) {
+        if (event.getName().equals("search") && event.getFocusedOption().getName().equals("artist")) {
+            var options = artistRepository.findAll().stream()
+                    .filter(artist -> artist.getName().startsWith(event.getFocusedOption().getValue())) // only display words that start with the user's current input
+                    .map(artist -> new Command.Choice(artist.getName(), artist.getName())) // map the words to choices
+                    .toList();
+            event.replyChoices(options).queue();
+        }
+
+        if (event.getName().equals("search") && event.getFocusedOption().getName().equals("songname")) {
+            var options = trackRepository.findAll().stream()
+                    .filter(artistTrack -> artistTrack.getArtists().stream()
+                            .anyMatch(artist -> artist.getName().contains(event.getOptions().getFirst().getAsString())))
+                    .filter(track -> track.getName().startsWith(event.getFocusedOption().getValue()))
+                    .map(track -> new Command.Choice(track.getName(), track.getName()))
+                    .toList();
+            event.replyChoices(options).queue();
+        }
+    }
+
+    @Override
+    public List<Command.Choice> autocomplete(CommandAutoCompleteInteraction event) {
+        return List.of();
     }
 }
